--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "My Portfolio",
-    "short_name": "My Portfolio",
+    "short_name": "Portfolio_Test",
     "description": "My Portfolio Description",
     "icons": [
       {
