--- a/manifest.json
+++ b/manifest.json
@@ -4,22 +4,22 @@
     "description": "My Portfolio Description",
     "icons": [
       {
-        "src": "images/logo (128x128).png",
+        "src": "images/logo (128x128).jpg",
         "sizes": "72x72",
         "type": "image/png"
       },
       {
-        "src": "images/logo (96x96).png",
+        "src": "images/logo (96x96).jpg",
         "sizes": "96x96",
         "type": "image/png"
       },
       {
-        "src": "images/logo (128x128).png",
+        "src": "images/logo (128x128).jpg",
         "sizes": "128x128",
         "type": "image/png"
       },
       {
-        "src": "images/logo (144x144).png",
+        "src": "images/logo (144x144).jpg",
         "sizes": "144x144",
         "type": "image/png"
       }
